Mayor refactoring. Replaced the ID type of UUID with Integer. Fixed the tests, updated the search functionality, cleaned up some code.