@@ -9,6 +9,7 @@ import com.example.dms.domain.DmsType;
 import com.example.dms.domain.DmsUser;
 import com.example.dms.repositories.UserRepository;
 import com.example.dms.security.DmsUserDetails;
+import com.example.dms.services.ContentService;
 import com.example.dms.services.DocumentService;
 import com.example.dms.utils.Utils;
 import org.junit.jupiter.api.BeforeEach;
@@ -18,19 +19,14 @@ import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.core.MethodParameter;
 import org.springframework.http.MediaType;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.web.bind.support.WebDataBinderFactory;
-import org.springframework.web.context.request.NativeWebRequest;
-import org.springframework.web.method.support.HandlerMethodArgumentResolver;
-import org.springframework.web.method.support.ModelAndViewContainer;
 
 import java.util.Arrays;
-import java.util.UUID;
+import java.util.List;
 
 import static org.mockito.Mockito.doNothing;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
@@ -60,6 +56,9 @@ class DocumentControllerTest {
 	@MockBean
 	private DmsUserDetails userDetails;
 
+	@MockBean
+	private ContentService contentService;
+
 	DmsUser validUser;
 	DmsDocument validDocument;
 	DmsType type;
@@ -69,24 +68,6 @@ class DocumentControllerTest {
 	ModifyDocumentDTO modifyDocumentDTO;
 
 	private static final String BASE_URL = "/api/v1/documents";
-	
-	
-	public class DmsDetailsArgumentResolver implements HandlerMethodArgumentResolver {
-	    @Override
-	    public boolean supportsParameter(MethodParameter parameter) {
-	        return parameter.getParameterType().isAssignableFrom(DmsUserDetails.class);
-	    }
-
-	    @Override
-	    public Object resolveArgument(MethodParameter parameter, ModelAndViewContainer mavContainer,
-	                                  NativeWebRequest webRequest, WebDataBinderFactory binderFactory) {
-	        DmsUser user = DmsUser.builder()
-	                .username("admin")
-	                .build();
-	        DmsUserDetails userDetails = new DmsUserDetails(user, null);
-	        return userDetails;
-	    }
-	}
 
 	@BeforeEach
 	void setUp() {
@@ -94,19 +75,19 @@ class DocumentControllerTest {
 		typeDTO = DmsTypeDTO.builder().typeName("tajni").build();
 		validUser = DmsUser.builder().username("dcrncic").password("12345").firstName("Darjan").lastName("Crnčić")
 				.email("darjan.crncic@gmail.com").build();
-		validUser.setId(UUID.randomUUID());
+		validUser.setId(1);
 
 		validDocument = DmsDocument.builder().objectName("testni").creator(validUser)
-				.description("testni dokument za test").keywords(Arrays.asList(new String[] { "prvi", "drugi" }))
+				.description("testni dokument za test").keywords(Arrays.asList("prvi", "drugi"))
 				.immutable(false).type(type).build();
 
 		newDocumentDTO = NewDocumentDTO.builder().objectName("testni").description("testni dokument za test")
-				.keywords(Arrays.asList(new String[] { "prvi", "drugi" })).type(type.getTypeName()).username("admin").build();
+				.keywords(Arrays.asList("prvi", "drugi")).type(type.getTypeName()).build();
 		validDocumentDTO = DmsDocumentDTO.builder().objectName("testni").description("testni dokument za test")
-				.keywords(Arrays.asList(new String[] { "prvi", "drugi" })).type(typeDTO.getTypeName()).build();
+				.keywords(Arrays.asList("prvi", "drugi")).type(typeDTO.getTypeName()).build();
 
 		modifyDocumentDTO = ModifyDocumentDTO.builder().objectName("modifiedDoc")
-				.description("this is the modified doc").keywords(Arrays.asList(new String[] { "prvi", "drugi" }))
+				.description("this is the modified doc").keywords(Arrays.asList("prvi", "drugi"))
 				.type("tajni").build();
 	}
 
@@ -126,33 +107,33 @@ class DocumentControllerTest {
 
 	@Test
 	void deleteDocumentTest() throws Exception {
-		doNothing().when(documentService).deleteById(Mockito.any(UUID.class));
+		doNothing().when(documentService).deleteById(Mockito.any(Integer.class));
 
-		mockMvc.perform(delete(BASE_URL + "/{id}", UUID.randomUUID())).andExpect(status().isOk());
+		mockMvc.perform(delete(BASE_URL + "/{id}", 1)).andExpect(status().isOk());
 	}
 
 	@Test
 	void getAllDocumentsTest() throws Exception {
-		BDDMockito.given(documentService.findAll()).willReturn(Arrays.asList(validDocumentDTO));
+		BDDMockito.given(documentService.findAll()).willReturn(List.of(validDocumentDTO));
 
 		mockMvc.perform(get(BASE_URL)).andExpect(status().isOk()).andExpect(jsonPath("$").isArray());
 	}
 
 	@Test
 	void modifyDocumentPutTest() throws Exception {
-		BDDMockito.given(documentService.updateDocument(Mockito.any(UUID.class), Mockito.any(ModifyDocumentDTO.class),
+		BDDMockito.given(documentService.updateDocument(Mockito.any(Integer.class), Mockito.any(ModifyDocumentDTO.class),
 				Mockito.anyBoolean())).willReturn(validDocumentDTO);
 
-		mockMvc.perform(put(BASE_URL + "/{id}", UUID.randomUUID()).content(Utils.stringify(modifyDocumentDTO))
+		mockMvc.perform(put(BASE_URL + "/{id}", 1).content(Utils.stringify(modifyDocumentDTO))
 				.contentType(MediaType.APPLICATION_JSON)).andExpect(status().isOk());
 	}
 
 	@Test
 	void modifyDocumentPatchTest() throws Exception {
-		BDDMockito.given(documentService.updateDocument(Mockito.any(UUID.class), Mockito.any(ModifyDocumentDTO.class),
+		BDDMockito.given(documentService.updateDocument(Mockito.any(Integer.class), Mockito.any(ModifyDocumentDTO.class),
 				Mockito.anyBoolean())).willReturn(validDocumentDTO);
 
-		mockMvc.perform(patch(BASE_URL + "/{id}", UUID.randomUUID()).content(Utils.stringify(modifyDocumentDTO))
+		mockMvc.perform(patch(BASE_URL + "/{id}", 1).content(Utils.stringify(modifyDocumentDTO))
 				.contentType(MediaType.APPLICATION_JSON)).andExpect(status().isOk());
 	}
 
